# RWordPad

./: .gitignore  CMakeLists.txt  README.md  README.txt  reactos2rwp.sh  rwp2reactos.sh  wordpad.c
.github/workflows/: build.yml  cmake.yml
compat/: debug.c  wWinMain.c
reactos/: buildno.h  version.h
